# face-mask-detector-cnn

./: .gitignore  README.md  face_mask_detector_cnn.ipynb  main.py  model.py  pyproject.toml  train.py  utils.py
data/: mask_detection_dataset.py  prepare_dataset.py
