[tool.poetry]
name = "face-mask-detector-cnn"
version = "0.1.0"
description = "A convolutional neural network that can analyze face images and detect whether a person is wearing a face mask or not"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
torch = {version = "^1.7.0", python = "^3.7"}
pandas = "^1.1.4"
opencv-python = "^4.4.0"
tqdm = "^4.51.0"
googledrivedownloader = "^0.4"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
